--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "@darthsoup/zxcvbn-ts",
+  "type": "module",
   "version": "0.1.0",
   "description": "zxcvbn",
-  "type": "module",
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.esm.js",
-  "types": "./dist/index.d.ts",
+  "license": "MIT",
+  "sideEffects": false,
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -14,18 +13,20 @@
       "default": "./dist/index.esm.js"
     }
   },
-  "sideEffects": false,
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.esm.js",
+  "types": "./dist/index.d.ts",
   "files": [
-    "dist",
     "LICENSE",
-    "README.md"
+    "README.md",
+    "dist"
   ],
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c --watch",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint",
-    "lint:fix": "eslint --fix",
+    "lint": "eslint \"src/*.{js,ts}\" ",
+    "lint:fix": "eslint \"src/*.{js,ts}\" --fix",
     "test": "vitest",
     "test:watch": "vitest --watch",
     "test:coverage": "vitest --coverage",
@@ -34,15 +35,6 @@
     "prepublishOnly": "pnpm build",
     "release": "semantic-release"
   },
-  "lint-staged": {
-    "*.{js,ts,json}": "biome check --write --no-errors-on-unmatched"
-  },
-  "keywords": [
-    "typescript",
-    "library",
-    "template"
-  ],
-  "license": "MIT",
   "devDependencies": {
     "@antfu/eslint-config": "^5.2.1",
     "@rollup/plugin-commonjs": "^28.0.6",
@@ -65,5 +57,8 @@
     "tslib": "^2.8.1",
     "typescript": "^5.8.3",
     "vitest": "3.2.4"
+  },
+  "lint-staged": {
+    "*.{js,ts,json}": "biome check --write --no-errors-on-unmatched"
   }
 }
